[package]
name = "gallium"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["win32_surface"]
surface = []
win32_surface = ["surface"]

[dependencies]
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.12.0"
raw-window-handle = "0.5"


[dev-dependencies]
png = "0.17.10"
winit = "0.28.7"
